[gd_scene format=3 uid="uid://barl4q1kugrmm"]

[ext_resource type="Script" uid="uid://do7kkb4ijqk5p" path="res://scenes/gameplay/gameplay-ui-layer/gameplay-ui-layer.gd" id="2"]
[ext_resource type="Theme" uid="uid://ducfept6pmkkm" path="res://resources/theme/theme-main.tres" id="3"]
[ext_resource type="Texture2D" uid="uid://byniue2cdd2yv" path="res://scenes/gameplay/gameplay-ui-layer/pause_button.png" id="4"]

[sub_resource type="LabelSettings" id="LabelSettings_nevgd"]
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_qwhv0"]
font_size = 30

[node name="GameplayUILayer" type="CanvasLayer" unique_id=1013752035]
process_mode = 3
layer = 2
script = ExtResource("2")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1622395663]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0.243137, 0.211765, 0.290196, 0.717647)

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=877520577]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Control" type="Control" parent="MarginContainer" unique_id=1100687783]
layout_mode = 2
mouse_filter = 2

[node name="PauseButton" type="TextureButton" parent="MarginContainer/Control" unique_id=1803284358]
visible = false
layout_mode = 1
offset_left = -147.0
offset_top = -11.0
offset_right = -105.0
offset_bottom = 31.0
size_flags_horizontal = 0
mouse_filter = 1
texture_normal = ExtResource("4")
ignore_texture_size = true
stretch_mode = 0

[node name="VBoxOptions" type="VBoxContainer" parent="MarginContainer/Control" unique_id=1103223685]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.0
offset_top = -113.0
offset_right = 99.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="MarginContainer/Control/VBoxOptions" unique_id=161659767]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
focus_neighbor_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
text = "RESUME"

[node name="RestartButton" type="Button" parent="MarginContainer/Control/VBoxOptions" unique_id=455945692]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
focus_neighbor_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
text = "RESTART"

[node name="ExitButton" type="Button" parent="MarginContainer/Control/VBoxOptions" unique_id=478390749]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
focus_neighbor_top = NodePath("../RestartButton")
focus_previous = NodePath("../RestartButton")
text = "EXIT"

[node name="VBoxControls" type="VBoxContainer" parent="MarginContainer/Control" unique_id=514255534]
layout_mode = 0
offset_left = -7.0
offset_top = -18.0
offset_right = 173.0
offset_bottom = 149.0

[node name="ControlsLabel" type="Label" parent="MarginContainer/Control/VBoxControls" unique_id=717784726]
layout_mode = 2
theme = ExtResource("3")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "CONTROLS:"

[node name="ControlsLabel2" type="Label" parent="MarginContainer/Control/VBoxControls" unique_id=1129030706]
layout_mode = 2
theme = ExtResource("3")
theme_override_colors/font_color = Color(0.788235, 0.788235, 0.788235, 1)
text = "Pause - ESC
Place object - Mouse click
Rotate object - Q/E
Move camera - WASD
Zoom in/out - Mouse wheel
"
label_settings = SubResource("LabelSettings_nevgd")

[node name="VBoxScore" type="VBoxContainer" parent="MarginContainer/Control" unique_id=1170027077]
layout_mode = 0
offset_left = 1033.0
offset_top = -21.0
offset_right = 1101.0
offset_bottom = 53.0

[node name="ScoreExplanationLabel" type="Label" parent="MarginContainer/Control/VBoxScore" unique_id=93417485]
layout_mode = 2
text = "SCORE:"
horizontal_alignment = 1

[node name="ScoreNumber" type="Label" parent="MarginContainer/Control/VBoxScore" unique_id=368111299]
layout_mode = 2
label_settings = SubResource("LabelSettings_qwhv0")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/Control/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="MarginContainer/Control/VBoxOptions/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="MarginContainer/Control/VBoxOptions/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MarginContainer/Control/VBoxOptions/ExitButton" to="." method="_on_ExitButton_pressed"]
